--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 						<p>Director&nbsp;&bull;&nbsp; Do-Main &nbsp;&bull;&nbsp; Life is code</p>
 						<nav>
 							<ul>
-								<li><a href="https://twitter.com/midhunraj647" class="icon brands fa-twitter"><span class="label" style="color:	#1DA1F2;">Twitter</span></a></li>
+								<li><a href="https://twitter.com/midhunraj647" class="icon brands fa-twitter" style="color: darkblue;" ><span class="label" >Twitter</span></a></li>
 								<li><a href="https://www.linkedin.com/in/midhun-raj-b5270a153/" class="icon brands fa-linkedin" style="color: #0077b5;"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://youtube.com/channel/UCVLwBT5nJyGFglHPOE1m2iw" class="icon brands fa-youtube" style="color: rgb(255, 0, 0);"><span class="label">Youtube</span></a></li>
 								<li><a href="https://www.instagram.com/m_dh_n.raj/" class="icon brands fa-instagram" style="color: #8a3ab9;"><span class="label">Instagram</span></a></li>
-								<li><a href="https://github.com/MIDHUnRaj647" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://github.com/MIDHUnRaj647" class="icon brands fa-github" style="color: forestgreen;"><span class="label">Github</span></a></li>
 							</ul>
 						</nav>
 					</header>
