--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload">
+	<body class="is-preload" oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
 		<div id="wrapper">
 			<div id="bg"></div>
 			<div id="overlay"></div>
