--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Midhun Raj</h1>
-						<p>Director&nbsp;&bull;&nbsp; Do-Main &nbsp;&bull;&nbsp; Life is code</p>
+						<h1>Midhun Raj M</h1>
+						<p>Director&nbsp;&bull;&nbsp; dhegodcoder &nbsp;&bull;&nbsp; Coded life</p>
 						<nav>
 							<ul>
 								<li><a href="https://twitter.com/midhunraj647" class="icon brands fa-twitter" style="color: darkblue;" ><span class="label" >Twitter</span></a></li>
@@ -34,11 +34,11 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; MIDHUN RAJ<a href="#"></a></span>
+						<span class="copyright">&copy; MIDHUN RAJ M<a href="#"></a></span>
 					</footer>
 
 			</div>
-		</div>
+		</divM
 		<script>
 			window.onload = function() { document.body.classList.remove('is-preload'); }
 			window.ontouchmove = function() { return false; }
