--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</footer>
 
 			</div>
-		</divM
+		</div>
 		<script>
 			window.onload = function() { document.body.classList.remove('is-preload'); }
 			window.ontouchmove = function() { return false; }
